Tune for ec2, #3

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -62,7 +62,7 @@
     "from scipy.spatial      import Voronoi\n",
     "from shapely.geometry   import Polygon\n",
     "from shapely.ops        import unary_union\n",
-    "from shapely.validation import make_valid"
+    "#from shapely.validation import make_valid"
    ]
   },
   {
@@ -1049,7 +1049,8 @@
     "            \n",
     "    ## generate valid polygons and return object\n",
     "    for i in range(0, len(vor_polys)):\n",
-    "        try: vor_polys[i] = make_valid(Polygon(vor_polys[i]))\n",
+    "##        try: vor_polys[i] = make_valid(Polygon(vor_polys[i])) ## patch for ec2\n",
+    "        try: vor_polys[i] = Polygon(vor_polys[i])\n",
     "        except: vor_polys[i] = None\n",
     "    return vor_polys\n",
     "        \n",
