Tune for ec2 #5

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -39,6 +39,7 @@
     "import numpy             as np\n",
     "import pandas            as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import ipyparallel       as ipp\n",
     "\n",
     "## import specific functions\n",
     "from matplotlib.colors  import hsv_to_rgb, to_hex\n",
@@ -53,8 +54,6 @@
     "from docx               import Document\n",
     "from textwrap           import fill as txt_wrap\n",
     "from geopy.distance     import geodesic\n",
-    "#from ipyparallel        import Cluster\n",
-    "import ipyparallel as ipp\n",
     "from sklearn.cluster    import AgglomerativeClustering, KMeans, DBSCAN\n",
     "from sklearn.mixture    import GaussianMixture\n",
     "from sklearn.metrics    import silhouette_score\n",
@@ -62,7 +61,7 @@
     "from scipy.spatial      import Voronoi\n",
     "from shapely.geometry   import Polygon\n",
     "from shapely.ops        import unary_union\n",
-    "#from shapely.validation import make_valid"
+    "from shapely.validation import make_valid"
    ]
   },
   {
@@ -1049,8 +1048,7 @@
     "            \n",
     "    ## generate valid polygons and return object\n",
     "    for i in range(0, len(vor_polys)):\n",
-    "##        try: vor_polys[i] = make_valid(Polygon(vor_polys[i])) ## patch for ec2\n",
-    "        try: vor_polys[i] = Polygon(vor_polys[i])\n",
+    "        try: vor_polys[i] = make_valid(Polygon(vor_polys[i])) ## patch for ec2\n",
     "        except: vor_polys[i] = None\n",
     "    return vor_polys\n",
     "        \n",
