--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -158,14 +158,14 @@
     "\n",
     "## time-saver settings\n",
     "set_acceleration = {\n",
-    "    'dbf_cache'              : True,\n",
+    "    'dbf_cache'              : False,\n",
     "    'sample_size'            : 1/2, ## 1/5, 1/10, 1/20\n",
-    "    'pop_cache'              : True,\n",
+    "    'pop_cache'              : False,\n",
     "    'distance_parallel_cores': 8,\n",
-    "    'distance_cache'         : True,\n",
+    "    'distance_cache'         : False,\n",
     "    'cluster_parallel_cores' : 8,\n",
-    "    'cluster_L1_cache'       : True,\n",
-    "    'cluster_L2_cache'       : True\n",
+    "    'cluster_L1_cache'       : False,\n",
+    "    'cluster_L2_cache'       : False\n",
     "    }\n",
     "\n",
     "## map parameters\n",
@@ -1793,7 +1793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
