--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -65,6 +65,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c0213c1-3b22-4d77-b253-e35baad3683b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## confirm that nbconvert exports images\n",
+    "plt.scatter([1,2,3], [1,2,4])\n",
+    "plt.gcf().savefig('confirm_image_export.png')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0e46a131-c865-43fc-80be-1c2c1576466f",
    "metadata": {},
@@ -1793,7 +1805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
